kubernetes/api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: api-gateway
  name: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: api-gateway
    spec:
      containers:
      - image: gcr.io/smooth-research-397708/api-gateway:v1
        name: api-gateway
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 1234
status: {}
