kubernetes/collaboration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: collaboration-service
  name: collaboration-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collaboration-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: collaboration-service
    spec:
      containers:
      - image: gcr.io/smooth-research-397708/collaboration-service:v1
        name: collaboration-service
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 8080 
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: collaboration-service
  labels:
    run: collaboration-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: collaboration-service
