kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: gcr.io/smooth-research-397708/frontend:v1
        name: frontend
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 3000 
        # env:
        #   - name: NEXT_PUBLIC_BACKEND_URL
        #     valueFrom:
        #       configMapKeyRef:
        #         key: API_GATEWAY_URL
        #         name: configmap
        #   - name: NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME
        #     valueFrom:
        #       configMapKeyRef:
        #         key: NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME
        #         name: configmap
        #   - name: NEXT_PUBLIC_FRONTEND_URL
        #     valueFrom:
        #       configMapKeyRef:
        #         key: FRONTEND_URL
        #         name: configmap
        #   - name: NEXT_PUBLIC_COLLAB_SERVICE_URL
        #     valueFrom:
        #       configMapKeyRef:
        #         key: COLLABORATION_SERVICE_URL
        #         name: configmap
        #   - name: NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET
        #     valueFrom:
        #       configMapKeyRef:
        #         key: NEXT_PUBLIC_CLOUDINARY_UPLOAD_PRESET
        #         name: configmap
        #   - name: NEXT_PUBLIC_GITHUB_OAUTH_CLIENT_ID
        #     valueFrom:
        #       secretKeyRef:
        #         name: secrets
        #         key: GITHUB_CLIENT_ID
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    run: frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
  type: LoadBalancer
  loadBalancerIP: "34.87.146.191"
