kubernetes/matching-consumer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: matching-consumer
  name: matching-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-consumer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: matching-consumer
    spec:
      containers:
      - image: gcr.io/smooth-research-397708/matching-consumer:v1
        name: matching-consumer
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 8080
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: matching-consumer
  labels:
    run: matching-consumer
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: matching-consumer
