kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: rabbitmq
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 15672
        - containerPort: 5672
      #   env:
      #   - name: RABBITMQ_DEFAULT_USER
      #     valueFrom:
      #       secretKeyRef:
      #         key: RABBITMQ_DEFAULT_USER
      #         name: secrets
      #   - name: RABBITMQ_DEFAULT_PASS
      #     valueFrom:
      #       secretKeyRef:
      #         key: RABBITMQ_DEFAULT_PASS
      #         name: secrets
      #   volumeMounts:
      #   - name: rabbitmq-persistent-storage
      #     mountPath: /var/lib/rabbitmq
      # volumes:
      # - name: rabbitmq-persistent-storage
      #   persistentVolumeClaim:
      #     claimName: rabbitmq-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    run: rabbitmq
spec:
  ports:
  - port: 5672
    protocol: TCP
    targetPort: 5672
    name: amqp
  - port: 15672
    protocol: TCP
    targetPort: 15672
    name: management
  selector:
    app: rabbitmq
