kubernetes/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user-service
    spec:
      containers:
      - image: gcr.io/smooth-research-397708/user-service:v1
        name: user-service
        imagePullPolicy: Always
        resources: {}
        ports:
        - containerPort: 8080
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    run: user-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: user-service
